feat: Implemented JWT + Cookie Authentication

--- a/WebApp/backend/QuizMaster.API.Authentication/QuizMaster.API.Authentication.csproj
+++ b/WebApp/backend/QuizMaster.API.Authentication/QuizMaster.API.Authentication.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QuizMaster.Library.Common\QuizMaster.Library.Common.csproj" />
   </ItemGroup>
 
 </Project>
