--- a/WebApp/backend/QuizMaster.API.Authentication/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Authentication/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings": {
+    "JWTSecret": "__SECRET_JWT_TESTING_PURPOSE__-2c0a94bf-9ab0-4432-993f-3c0f8234e180",
+    "IntExpireHour": 12
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
