fix: Added Working-Directory to Workflow

--- a/.github/workflows/backend.api.auth.yml
+++ b/.github/workflows/backend.api.auth.yml
@@ -15,9 +15,16 @@ jobs:
         with:
           # semantic version range syntax or exact version of a dotnet version
           dotnet-version: "6.x"
+      - name: Set Working directory to project directory
+        working-directory: WebApp/backend/QuizMaster.API.Authentication
+        run: |
+          ls -la
       - name: Install Dependencies
+        working-directory: WebApp/backend/QuizMaster.API.Authentication
         run: dotnet restore
       - name: Build Project
+        working-directory: WebApp/backend/QuizMaster.API.Authentication
         run: dotnet build
       - name: Test with the dotnet CLI
+        working-directory: WebApp/backend/QuizMaster.API.Authentication
         run: dotnet test
