--- a/.github/workflows/backend.api.auth.yml
+++ b/.github/workflows/backend.api.auth.yml
@@ -13,6 +13,8 @@ jobs:
         working-directory: WebApp/backend/QuizMaster.API.Authentication
 
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
       - name: Setup .NET 6.x
         uses: actions/setup-dotnet@v3
         with:
