feat: Added QuizMasterAccountAPI module.

--- a/WebApp/backend/QuizMaster.API.Account/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.Account/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "QuizMasterAccountDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=QuizMasterAccount;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
