--- a/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gatewway.csproj
+++ b/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gatewway.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\accounts.proto" GrpcService ="Client"/>
+    <Protobuf Include="Protos\accounts.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
