--- a/WebApp/backend/QuizMaster.API.Authentication/QuizMaster.API.Authentication.csproj
+++ b/WebApp/backend/QuizMaster.API.Authentication/QuizMaster.API.Authentication.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
