feat: Media Service API - CRUD Functionality

--- a/WebApp/backend/QuizMaster.API.Media/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Media/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqliteConnStr": "Data Source=MediaDatabase.sqlite"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
