feat: Add CRUD functionality for question category, type, and difficulty.

--- a/WebApp/backend/QuizMaster.API.Quiz/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.Quiz/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "QuizMasterQuestionDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=QuizMasterQuestion;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
