--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "JWTSecret": "__SECRET_JWT_TESTING_PURPOSE__-2c0a94bf-9ab0-4432-993f-3c0f8234e180",
+    "IntExpireHour": 12
+  }
 }
