feat: RabbitMQ Implemented for Account and Auth Microservices - Since we implemented RabbitMQ in the services, make sure that the RabbitMQ   server is running in docker, see https://www.rabbitmq.com/ for setup process - Microservices RabbitMQ configuration settings are found in AppSettings.json   on both the QuizMaster-Auth and QuizMaster-Account API's

--- a/WebApp/backend/QuizMaster.API.Account/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Account/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "QuizMasterAccountDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=QuizMasterAccount;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ApplicationSettings": {
+    "RabbitMq_Account_ExchangeName": "QuizMasterExchange",
+    "RabbitMq_Account_RequestQueueName": "QuizMasterRequestQueue",
+    "RabbitMq_Account_ResponseQueueName": "QuizMasterResponseQueue",
+    "RabbitMq_Hostname": "localhost"
+  }
 }
