--- a/WebApp/backend/QuizMaster.API.Authentication/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.Authentication/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ApplicationSettings": {
+    "RabbitMq_Account_ExchangeName": "QuizMasterExchange",
+    "RabbitMq_Account_RequestQueueName": "QuizMasterRequestQueue",
+    "RabbitMq_Account_ResponseQueueName": "QuizMasterResponseQueue",
+    "RabbitMq_Hostname": "localhost"
   }
 }
