--- a/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
+++ b/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
@@ -16,12 +16,13 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\QuizMaster.API.Account\QuizMaster.API.Account.csproj" />
     <ProjectReference Include="..\QuizMaster.API.Authentication\QuizMaster.API.Authentication.csproj" />
+    <ProjectReference Include="..\QuizMaster.API.Quiz\QuizMaster.API.Quiz.csproj" />
     <ProjectReference Include="..\QuizMaster.Library.Common\QuizMaster.Library.Common.csproj" />
   </ItemGroup>
 
@@ -31,6 +32,9 @@
     </Protobuf>
     <Protobuf Include="..\QuizMaster.API.Authentication\Proto\account.proto" GrpcServices="Client">
       <Link>Protos\account.proto</Link>
+    </Protobuf>
+    <Protobuf Include="..\QuizMaster.API.Quiz\Protos\quiz_category.proto" GrpcServices="Client">
+      <Link>Protos\quiz_category.proto</Link>
     </Protobuf>
   </ItemGroup>
 
