--- a/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
+++ b/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\quiz_category.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
 	  <PackageReference Include="AutoMapper" Version="12.0.1" />
 	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 	  <PackageReference Include="Google.Protobuf" Version="3.24.4" />
@@ -37,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\GRPC\" />
+    <Protobuf Include="Protos\quiz_category.proto" GrpcServices="Server" />
   </ItemGroup>
 
 </Project>
