--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -14,19 +14,21 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"autoprefixer": "^10",
+		"eslint": "^8",
+		"eslint-config-next": "13.5.6",
 		"next": "13.5.6",
 		"react": "^18",
 		"react-dom": "^18",
 		"tailwindcss": "^3",
-		"typescript": "^5",
-		"autoprefixer": "^10",
-		"eslint": "^8",
-		"eslint-config-next": "13.5.6"
+		"typescript": "^5"
 	},
 	"devDependencies": {
-		"@testing-library/jest-dom": "^6.1.4",
+		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.5.1",
+		"eslint-plugin-jest-dom": "^5.1.0",
+		"eslint-plugin-testing-library": "^6.1.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"postcss": "^8",
