--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -11,6 +11,8 @@
 		"test:watch": "jest --watchAll"
 	},
 	"dependencies": {
+		"@mantine/core": "^7.1.5",
+		"@mantine/hooks": "^7.1.5",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
@@ -21,7 +23,8 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"tailwindcss": "^3",
-		"typescript": "^5"
+		"typescript": "^5",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.16.5",
