--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -20,6 +20,7 @@
 		"eslint": "^8",
 		"eslint-config-next": "13.5.6",
 		"next": "13.5.6",
+		"next-auth": "^4.24.3",
 		"react": "^18",
 		"react-dom": "^18",
 		"tailwindcss": "^3",
