--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -19,6 +19,7 @@
 		"autoprefixer": "^10",
 		"eslint": "^8",
 		"eslint-config-next": "13.5.6",
+		"jwt-decode": "^3.1.2",
 		"next": "13.5.6",
 		"next-auth": "^4.24.3",
 		"react": "^18",
