--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -24,6 +24,7 @@
 		"next-auth": "^4.24.3",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-hook-form": "^7.47.0",
 		"tailwindcss": "^3",
 		"typescript": "^5",
 		"zod": "^3.22.4"
