--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -11,8 +11,8 @@
 		"test:watch": "jest --watchAll"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "^3.3.2",
 		"@mantine/core": "^7.1.5",
+		"@mantine/form": "^7.1.5",
 		"@mantine/hooks": "^7.1.5",
 		"@types/node": "^20",
 		"@types/react": "^18",
@@ -25,7 +25,6 @@
 		"next-auth": "^4.24.3",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-hook-form": "^7.47.0",
 		"tailwindcss": "^3",
 		"typescript": "^5",
 		"zod": "^3.22.4"
