--- a/WebApp/backend/QuizMaster.API.Account/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Account/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QuizMasterAccountDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=QuizMasterAccount;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "QuizMasterAccountDBConnectionString": "Server=mssql-database;Database=QuizMasterAccount;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "ApplicationSettings": {
     "RabbitMq_Account_ExchangeName": "QuizMasterExchange",
