action-required: Success on dockerize services, failed gRPC connections There is a successful connection on dockerizing all the services including rabbitmq and mssql server, the only problem is that the gRPC keeps on refusing the requested addresses. See quizmaster gateway project and go to  then modify the config for the gRPC links
Signed-off-by: JayMar921 <jayharronabejar@gmail.com>

--- a/WebApp/backend/QuizMaster.API.Account/QuizMaster.API.Account.csproj
+++ b/WebApp/backend/QuizMaster.API.Account/QuizMaster.API.Account.csproj
@@ -49,4 +49,10 @@
     <Protobuf Include="Proto\accounts.proto" GrpcServices="Server" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="localhost_cert.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
