--- a/WebApp/backend/QuizMaster.API.Account/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.Account/appsettings.Development.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QuizMasterAccountDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=QuizMasterAccount;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "QuizMasterAccountDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=QuizMasterAccount;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "ApplicationSettings": {
     "RabbitMq_Account_ExchangeName": "QuizMasterExchange",
