--- a/WebApp/backend/QuizMaster.API.Account/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Account/appsettings.json
@@ -7,12 +7,20 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "QuizMasterAccountDBConnectionString": "Server=mssql-database;Database=QuizMasterAccount;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "QuizMasterAccountDBConnectionString": "Server=mssql-database;Database=QuizMasterAccount;User Id=sa;Password=P@ssw0rd;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
   "ApplicationSettings": {
     "RabbitMq_Account_ExchangeName": "QuizMasterExchange",
     "RabbitMq_Account_RequestQueueName": "QuizMasterRequestQueue",
     "RabbitMq_Account_ResponseQueueName": "QuizMasterResponseQueue",
-    "RabbitMq_Hostname": "localhost"
+    "RabbitMq_Hostname": "rabbitmq-bus"
+  },
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "/app/localhost_cert.pfx",
+        "Password": "123456"
+      }
+    }
   }
 }
