--- a/WebApp/backend/QuizMaster.API.Authentication/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Authentication/appsettings.json
@@ -5,7 +5,7 @@
     "RabbitMq_Account_ExchangeName": "QuizMasterExchange",
     "RabbitMq_Account_RequestQueueName": "QuizMasterRequestQueue",
     "RabbitMq_Account_ResponseQueueName": "QuizMasterResponseQueue",
-    "RabbitMq_Hostname": "localhost"
+    "RabbitMq_Hostname": "rabbitmq-bus"
   },
   "Logging": {
     "LogLevel": {
@@ -13,5 +13,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "/app/localhost_cert.pfx",
+        "Password": "123456"
+      }
+    }
+  }
 }
