--- a/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
+++ b/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>8a58eac4-bd1e-4761-93f6-7dfba4993b25</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
   </PropertyGroup>
 
   <ItemGroup>
