--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "JWTSecret": "__SECRET_JWT_TESTING_PURPOSE__-2c0a94bf-9ab0-4432-993f-3c0f8234e180",
+    "IntExpireHour": 12,
+    "MICROSERVICE_ACCOUNT_HOST": "https://localhost:7175",
+    "MICROSERVICE_AUTH_HOST": "https://localhost:7062"
   }
 }
