--- a/WebApp/backend/QuizMaster.API.Authentication/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.Authentication/appsettings.Development.json
@@ -1,14 +1,17 @@
 {
+  "AppSettings": {
+    "JWTSecret": "__SECRET_JWT_TESTING_PURPOSE__-2c0a94bf-9ab0-4432-993f-3c0f8234e180",
+    "IntExpireHour": 12,
+    "RabbitMq_Account_ExchangeName": "QuizMasterExchange",
+    "RabbitMq_Account_RequestQueueName": "QuizMasterRequestQueue",
+    "RabbitMq_Account_ResponseQueueName": "QuizMasterResponseQueue",
+    "RabbitMq_Hostname": "localhost"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ApplicationSettings": {
-    "RabbitMq_Account_ExchangeName": "QuizMasterExchange",
-    "RabbitMq_Account_RequestQueueName": "QuizMasterRequestQueue",
-    "RabbitMq_Account_ResponseQueueName": "QuizMasterResponseQueue",
-    "RabbitMq_Hostname": "localhost"
-  }
+  "AllowedHosts": "*"
 }
