Feat: Create API Gateway for Media Service

--- a/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
+++ b/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1fffb094-b162-48e2-8de7-544b986f3d5c</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	  <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,14 +18,17 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.6.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	  <!-- If mo error ang inyoha dri nga part change lang ang version to 6.2.3 -->
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\QuizMaster.API.Account\QuizMaster.API.Account.csproj" />
     <ProjectReference Include="..\QuizMaster.API.Authentication\QuizMaster.API.Authentication.csproj" />
+    <ProjectReference Include="..\QuizMaster.API.Media\QuizMaster.API.Media.csproj" />
     <ProjectReference Include="..\QuizMaster.API.Quiz\QuizMaster.API.Quiz.csproj" />
     <ProjectReference Include="..\QuizMaster.Library.Common\QuizMaster.Library.Common.csproj" />
   </ItemGroup>
@@ -34,9 +40,16 @@
     <Protobuf Include="..\QuizMaster.API.Authentication\Proto\account.proto" GrpcServices="Client">
       <Link>Protos\account.proto</Link>
     </Protobuf>
+    <Protobuf Include="..\QuizMaster.API.Media\Proto\media.proto" GrpcServices="Client">
+      <Link>Protos\media.proto</Link>
+    </Protobuf>
     <Protobuf Include="..\QuizMaster.API.Quiz\Protos\quiz_category.proto" GrpcServices="Client">
       <Link>Protos\quiz_category.proto</Link>
     </Protobuf>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
