--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -9,8 +9,8 @@
   "AppSettings": {
     "JWTSecret": "__SECRET_JWT_TESTING_PURPOSE__-2c0a94bf-9ab0-4432-993f-3c0f8234e180",
     "IntExpireHour": 12,
-    "MICROSERVICE_ACCOUNT_HOST": "https://localhost:6052",
-    "MICROSERVICE_AUTH_HOST": "https://localhost:6053"
+    "MICROSERVICE_ACCOUNT_HOST": "https://quizmaster-api-account:6052",
+    "MICROSERVICE_AUTH_HOST": "https://quizmaster-api-authentication:6053"
   },
   "Kestrel": {
     "Certificates": {
