Ref: Add configuration class to the http address of each service

--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -9,5 +9,12 @@
   "AppSettings": {
     "JWTSecret": "__SECRET_JWT_TESTING_PURPOSE__-2c0a94bf-9ab0-4432-993f-3c0f8234e180",
     "IntExpireHour": 12
+  },
+  "GrpcServerConfiguration": {
+    "Account_Service": "https://localhost:7175",
+    "Authentication_Service": "https://localhost:7062",
+    "Media_Service": "https://localhost:7197",
+    "Quiz_Category_Service": "https://localhost:7228",
   }
+
 }
