action-required: need fix, gRPC connection refused

--- a/WebApp/backend/QuizMaster.API.Account/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Account/appsettings.json
@@ -21,6 +21,9 @@
         "Path": "/app/localhost_cert.pfx",
         "Password": "123456"
       }
+    },
+    "EndpointDefaults": {
+      "Protocols": "Http1AndHttp2"
     }
   }
 }
