--- a/WebApp/backend/QuizMaster.API.Account/Dockerfile
+++ b/WebApp/backend/QuizMaster.API.Account/Dockerfile
@@ -20,4 +20,4 @@ RUN dotnet publish "QuizMaster.API.Account.csproj" -c Release -o /app/publish /p
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "QuizMaster.API.Account.dll"]
+ENTRYPOINT ["dotnet", "QuizMaster.API.Account.dll", "https://*:6052"]
