--- a/WebApp/backend/QuizMaster.API.Account/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Account/appsettings.json
@@ -22,6 +22,11 @@
         "Password": "123456"
       }
     },
+    "Endpoints": {
+      "Https": {
+        "Url": "https://*:6052"
+      }
+    },
     "EndpointDefaults": {
       "Protocols": "Http1AndHttp2"
     }
