--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.Development.json
@@ -11,5 +11,13 @@
     "IntExpireHour": 12,
     "MICROSERVICE_ACCOUNT_HOST": "https://localhost:7175",
     "MICROSERVICE_AUTH_HOST": "https://localhost:7062"
+  },
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "/app/localhost_cert.pfx",
+        "Password": "123456"
+      }
+    }
   }
 }
