Ref: Cleanup code to run on debug prepare for docker

--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -16,6 +16,7 @@
     "Media_Service": "https://localhost:7197",
     "Quiz_Category_Service": "https://localhost:7228"
   },
+  //======================= Development =================================
   "Kestrel": {
     "Certificates": {
       "Default": {
@@ -23,6 +24,16 @@
         "Password": "123456"
       }
     }
-  }
+  },
+
+  // ======================= Docker ==================================
+  //"Kestrel": {
+  //  "Certificates": {
+  //    "Default": {
+  //      "Path": "/app/localhost_cert.pfx",
+  //      "Password": "123456"
+  //    }
+  //  }
+  //}
 
 }
