Dockerized Account, Authentication, and Gateway

--- a/WebApp/backend/QuizMaster.API.Account/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Account/appsettings.json
@@ -13,25 +13,25 @@
     "RabbitMq_Account_ExchangeName": "QuizMasterExchange",
     "RabbitMq_Account_RequestQueueName": "QuizMasterRequestQueue",
     "RabbitMq_Account_ResponseQueueName": "QuizMasterResponseQueue",
-    "RabbitMq_Hostname": "localhost"
-    //"RabbitMq_Hostname": "rabbitmq-bus"
+    //"RabbitMq_Hostname": "localhost"
+    "RabbitMq_Hostname": "rabbitmq-bus"
   },
   "Kestrel": {
     //=================== Development ===================
-    "Certificates": {
-      "Default": {
-        "Path": "localhost_cert.pfx",
-        "Password": "123456"
-      }
-    },
-
-    //=================== Docker ===================
     //"Certificates": {
     //  "Default": {
-    //    "Path": "/app/localhost_cert.pfx",
+    //    "Path": "localhost_cert.pfx",
     //    "Password": "123456"
     //  }
     //},
+
+    //=================== Docker ===================
+    "Certificates": {
+      "Default": {
+        "Path": "/app/localhost_cert.pfx",
+        "Password": "123456"
+      }
+    },
     "Endpoints": {
       "Https": {
         "Url": "https://*:6052"
