--- a/WebApp/backend/QuizMaster.API.Authentication/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Authentication/appsettings.json
@@ -5,8 +5,8 @@
     "RabbitMq_Account_ExchangeName": "QuizMasterExchange",
     "RabbitMq_Account_RequestQueueName": "QuizMasterRequestQueue",
     "RabbitMq_Account_ResponseQueueName": "QuizMasterResponseQueue",
-    "RabbitMq_Hostname": "localhost"
-    //"RabbitMq_Hostname": "rabbitmq-bus"
+    //"RabbitMq_Hostname": "localhost"
+    "RabbitMq_Hostname": "rabbitmq-bus"
   },
   "Logging": {
     "LogLevel": {
@@ -16,22 +16,27 @@
   },
   "AllowedHosts": "*",
   //================== Docker ==================
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "/app/localhost_cert.pfx",
+        "Password": "123456"
+      }
+    },
+    "Endpoints": {
+      "Https": {
+        "Url": "https://*:6053"
+      }
+    }
+  }
+
+  //==================== Dev ===================
   //"Kestrel": {
   //  "Certificates": {
   //    "Default": {
-  //      "Path": "/app/localhost_cert.pfx",
+  //      "Path": "localhost_cert.pfx",
   //      "Password": "123456"
   //    }
   //  }
   //}
-
-  //==================== Dev ===================
-  "Kestrel": {
-    "Certificates": {
-      "Default": {
-        "Path": "localhost_cert.pfx",
-        "Password": "123456"
-      }
-    }
-  }
 }
