--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -10,30 +10,39 @@
     "JWTSecret": "__SECRET_JWT_TESTING_PURPOSE__-2c0a94bf-9ab0-4432-993f-3c0f8234e180",
     "IntExpireHour": 12
   },
+  //======================== Route If Dev ==========================
+  //"GrpcServerConfiguration": {
+  //  "Account_Service": "https://localhost:6052",
+  //  "Authentication_Service": "https://localhost:7062",
+  //  "Media_Service": "https://localhost:7197",
+  //  "Quiz_Category_Service": "https://localhost:7228"
+  //},
+
+  //======================== Route If Docker ==========================
   "GrpcServerConfiguration": {
-    "Account_Service": "https://localhost:6052",
-    "Authentication_Service": "https://localhost:7062",
+    "Account_Service": "https://quizmaster-api-account:6052",
+    "Authentication_Service": "https://quizmaster-api-authentication:6053",
     "Media_Service": "https://localhost:7197",
     "Quiz_Category_Service": "https://localhost:7228"
   },
   //======================= Development =================================
-  "Kestrel": {
-    "Certificates": {
-      "Default": {
-        "Path": "localhost_cert.pfx",
-        "Password": "123456"
-      }
-    }
-  },
-
-  // ======================= Docker ==================================
   //"Kestrel": {
   //  "Certificates": {
   //    "Default": {
-  //      "Path": "/app/localhost_cert.pfx",
+  //      "Path": "localhost_cert.pfx",
   //      "Password": "123456"
   //    }
   //  }
   //}
+
+  // ======================= Docker ==================================
+  "Kestrel": {
+    "Certificates": {
+      "Default": {
+        "Path": "/app/localhost_cert.pfx",
+        "Password": "123456"
+      }
+    }
+  }
 
 }
