--- a/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
+++ b/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\quiz.proto" />
     <None Remove="Protos\quiz_category.proto" />
   </ItemGroup>
 
@@ -41,6 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Protobuf Include="Protos\quiz.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\quiz_category.proto" GrpcServices="Server" />
   </ItemGroup>
 
