--- a/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
+++ b/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
@@ -34,6 +34,7 @@
 	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+    <PackageReference Include="System.Text.Json" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
