Get all question difficulty

--- a/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
+++ b/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <None Remove="Protos\quiz.proto" />
     <None Remove="Protos\quiz_category.proto" />
+    <None Remove="Protos\quiz_difficulty.proto" />
   </ItemGroup>
 
   <ItemGroup>
@@ -44,6 +45,7 @@
   <ItemGroup>
     <Protobuf Include="Protos\quiz.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\quiz_category.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\quiz_difficulty.proto" GrpcServices="Server" />
   </ItemGroup>
 
 </Project>
