--- a/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
+++ b/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
@@ -49,6 +49,9 @@
     <Protobuf Include="..\QuizMaster.API.Quiz\Protos\quiz_category.proto" GrpcServices="Client">
       <Link>Protos\quiz_category.proto</Link>
     </Protobuf>
+    <Protobuf Include="..\QuizMaster.API.Quiz\Protos\quiz_difficulty.proto" GrpcServices="Client">
+      <Link>Protos\quiz_difficulty.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
   <ItemGroup>
