--- a/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
+++ b/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
@@ -10,6 +10,7 @@
     <None Remove="Protos\quiz.proto" />
     <None Remove="Protos\quiz_category.proto" />
     <None Remove="Protos\quiz_difficulty.proto" />
+    <None Remove="Protos\quiz_type.proto" />
   </ItemGroup>
 
   <ItemGroup>
@@ -47,6 +48,7 @@
     <Protobuf Include="Protos\quiz.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\quiz_category.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\quiz_difficulty.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\quiz_type.proto" GrpcServices="Server" />
   </ItemGroup>
 
 </Project>
