--- a/WebApp/backend/QuizMaster.API.QuizSession/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.QuizSession/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "QuizMasterQuizSessionDBConnectionString": "Data Source=QuizSession.db"
   }
 }
