--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -43,6 +43,7 @@
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.9.0",
     "postcss-simple-vars": "^7.0.1",
+    "prettier": "3.1.0",
     "tailwindcss": "^3.3.5",
     "ts-jest": "^29.1.1"
   }
