--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@ _NCrunch_*
 
 # packeges
 packages/
+
+# db
+/WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db
+/WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db-shm
+/WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db-wal
