--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -25,6 +25,7 @@
     "next": "13.5.6",
     "next-auth": "^4.24.3",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "typescript": "^5",
