fix: Fixed Quiz microservice connection string.

--- a/WebApp/backend/QuizMaster.API.Quiz/appsettings.Development.json
+++ b/WebApp/backend/QuizMaster.API.Quiz/appsettings.Development.json
@@ -11,6 +11,6 @@
     }
   },
   "ConnectionStrings": {
-    "QuizMasterQuestionDBConnectionString": "Server=(localdb)\\ProjectModels;Database=QuizMasterQuestion;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "QuizMasterQuestionDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=QuizMasterQuestion;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
