Feat: Add quiz category audit trail

--- a/WebApp/backend/QuizMaster.API.Monitoring/QuizMaster.API.Monitoring.csproj
+++ b/WebApp/backend/QuizMaster.API.Monitoring/QuizMaster.API.Monitoring.csproj
@@ -40,5 +40,6 @@
   </ItemGroup>
 	<ItemGroup>
 		<Protobuf Include="Proto\monitoring.proto" GrpcServices="Server,Client" />
+		<Protobuf Include="Proto\quizmonitoring.proto" GrpcServices="Server,Client" />
 	</ItemGroup>
 </Project>
