--- a/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
+++ b/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\QuizMaster.API.Monitoring\QuizMaster.API.Monitoring.csproj" />
     <ProjectReference Include="..\QuizMaster.Library.Common\QuizMaster.Library.Common.csproj" />
   </ItemGroup>
 
