--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -16,6 +16,7 @@
     "@mantine/form": "^7.1.5",
     "@mantine/hooks": "^7.1.5",
     "@mantine/modals": "^7.1.5",
+    "@mantine/notifications": "^7.1.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
