Initial GRPC Gateway configuration for session service

--- a/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
+++ b/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
@@ -44,6 +44,9 @@
     <Protobuf Include="..\QuizMaster.API.Media\Proto\media.proto" GrpcServices="Client">
       <Link>Protos\media.proto</Link>
     </Protobuf>
+    <Protobuf Include="..\QuizMaster.API.QuizSession\Protos\quiz_set.proto" GrpcServices="Client">
+      <Link>Protos\quiz_set.proto</Link>
+    </Protobuf>
     <Protobuf Include="..\QuizMaster.API.Quiz\Protos\quiz.proto" GrpcServices="Client">
       <Link>Protos\quiz.proto</Link>
     </Protobuf>
