--- a/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
+++ b/WebApp/backend/QuizMaster.API.Gatewway/appsettings.json
@@ -15,6 +15,7 @@
     "Authentication_Service": "https://localhost:7062",
     "Media_Service": "https://localhost:7197",
     "Quiz_Category_Service": "https://localhost:7228",
+    "Session_Service": "https://localhost:7230"
   }
 
 }
