--- a/WebApp/backend/QuizMaster.API.QuizSession/QuizMaster.API.QuizSession.csproj
+++ b/WebApp/backend/QuizMaster.API.QuizSession/QuizMaster.API.QuizSession.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <None Remove="Protos\quiz_set.proto" />
+    <None Remove="Protos\room.proto" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,6 +41,7 @@
 
   <ItemGroup>
     <Protobuf Include="Protos\quiz_set.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\room.proto" GrpcServices="Server" />
   </ItemGroup>
 
 </Project>
