--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ packages/
 /WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db-shm
 /WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db-wal
 /WebApp/backend/QuizMaster.API.Media/wwwroot/Images
+/WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db
