--- a/WebApp/backend/QuizMaster.API.QuizSession/QuizMaster.API.QuizSession.csproj
+++ b/WebApp/backend/QuizMaster.API.QuizSession/QuizMaster.API.QuizSession.csproj
@@ -44,4 +44,8 @@
     <Protobuf Include="Protos\room.proto" GrpcServices="Server" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
