Fix: Adjustments for managing questions in question table.

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ packages/
 /WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db-wal
 /WebApp/backend/QuizMaster.API.Media/wwwroot/Images
 /WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db
+/WebApp/backend/QuizMaster.API.QuizSession/QuizSession.db
