--- a/WebApp/frontend/quiz-master/package.json
+++ b/WebApp/frontend/quiz-master/package.json
@@ -18,9 +18,11 @@
         "@mantine/modals": "^7.1.5",
         "@mantine/notifications": "^7.2.2",
         "@mui/icons-material": "^5.14.18",
+        "@tanstack/react-query": "^5.14.2",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "axios": "^1.6.2",
         "eslint": "^8",
         "eslint-config-next": "13.5.6",
         "jwt-decode": "^3.1.2",
