--- a/WebApp/docker-compose.yml
+++ b/WebApp/docker-compose.yml
@@ -145,7 +145,7 @@ services:
       - rabbitmq
       - backend_api_monitoring
     environment:
-      - ConnectionStrings:QuizMasterQuestionDBConnectionString=Server=mssql;Database=QuizMasterMonitoring;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
+      - ConnectionStrings:QuizMasterQuestionDBConnectionString=Server=mssql;Database=QuizMasterQuiz;Trusted_Connection=False;TrustServerCertificate=True;User Id=sa;Password=MsSql123
       - AppSettings:RabbitMq_Quiz_ExchangeName=QuizMasterExchange_Quiz
       - AppSettings:RabbitMq_Quiz_QuizInitQueue=QuizMasterInitQueue_Quiz
       - AppSettings:RabbitMq_Hostname=rabbitmq
