Initialize darag and drop and add funcitonality to time bar

--- a/WebApp/frontend/quiz_session/package.json
+++ b/WebApp/frontend/quiz_session/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.5.0",
     "@mantine/core": "^7.3.2",
     "@mantine/hooks": "^7.3.2",
     "@microsoft/signalr": "^8.0.0",
@@ -16,6 +17,7 @@
     "@tabler/icons-react": "^2.44.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "zustand": "^4.4.7"
   },
