feat: Added question detail GRPC gateway endpoints and service.

--- a/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
+++ b/WebApp/backend/QuizMaster.API.Quiz/QuizMaster.API.Quiz.csproj
@@ -51,7 +51,8 @@
     <Protobuf Include="Protos\quiz.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\quiz_category.proto" GrpcServices="Server" />
     <Protobuf Include="Protos\quiz_difficulty.proto" GrpcServices="Server" />
-    <Protobuf Include="Protos\quiz_type.proto" GrpcServices="Server" />
+	<Protobuf Include="Protos\quiz_type.proto" GrpcServices="Server" />
+	<Protobuf Include="Protos\quiz_questionDetail.proto" GrpcServices="Server" />
   </ItemGroup>
 
 </Project>
