--- a/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
+++ b/WebApp/backend/QuizMaster.API.Gatewway/QuizMaster.API.Gateway.csproj
@@ -63,6 +63,9 @@
     <Protobuf Include="..\QuizMaster.API.Quiz\Protos\quiz_type.proto" GrpcServices="Client">
       <Link>Protos\quiz_type.proto</Link>
     </Protobuf>
+	  <Protobuf Include="..\QuizMaster.API.Quiz\Protos\quiz_questionDetail.proto" GrpcServices="Client">
+		  <Link>Protos\quiz_questionDetail.proto</Link>
+	  </Protobuf>
   </ItemGroup>
 
   <ItemGroup>
